# talks-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: api.yml
src/talks_api/: main.py
