[tool.poetry]
name = "talks-api"
version = "0.1.0"
description = ""
authors = ["Joel Holmes <holmes89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.0.4"
motor = "^2.2.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
